= HEAD

* Make assets plugin depend on h plugin, instead of using Rack::Utils.escape_html (jeremyevans)

* Make h plugin not escape / (celsworth, jeremyevans) (#100)

= 2.18.0 (2016-09-13)

* Add assets_preloading plugin, for creating link tags or Link header for preloading assets (celsworth, jeremyevans) (#98)

* Add assets_paths method to assets plugin, for just the paths to the assets, instead of the full tags (celsworth) (#96)

* Make type_routing plugin work correctly with public plugin (celsworth, jeremyevans) (#95)

* Add static_routing plugin for 3-4x increase in performance for large numbers of static routes (jeremyevans)

* Make head plugin work with not_allowed plugin if loaded after (jeremyevans) (#92)

= 2.17.0 (2016-08-13)

* Add :postprocessor option to assets plugin, for postprocessing assets (e.g. autoprefixing CSS) (celsworth) (#86)

* Fix path passed to rack apps when using r.run and the type_routing plugin (jeremyevans) (#82)

* Support :classes option to error_handler plugin for overriding which exception classes to rescue (jeremyevans)

* Support :layout_opts=>:merge_locals option in render plugin for merging view template locals into layout template locals (jeremyevans) (#80)

* Support :sri option to assets plugin to enable subresource integrity (jeremyevans)

* Add run_append_slash plugin, so r.run uses "/" instead of "" for app's PATH_INFO (kenaniah) (#77)

= 2.16.0 (2016-07-13)

* Add type_routing plugin, for routing based on path extensions and Accept headers (Papierkorb, jeremyevans) (#75)

* Add unescape_path plugin, for decoding URL-encoded PATH_INFO before routing (jeremyevans) (#74)

* Add request_headers plugin, for simpler access to request headers (celsworth) (#72)

= 2.15.0 (2016-06-13)

* Add public plugin for r.public method for serving all files in the public directory (jeremyevans)

* Make send_file in sinatra_helpers plugin work with Rack 2 (jeremyevans)
