@@ -1,5 +1,7 @@
 = HEAD
 
+* Fix assets_paths method in assets plugin when subresource integrity is used (jeremyevans, celsworth)
+
 * Make assets plugin depend on h plugin, instead of using Rack::Utils.escape_html (jeremyevans)
 
 * Make h plugin not escape / (celsworth, jeremyevans) (#100)
